# rocfoam-csc

./: .gitignore  Allwclean  Allwmake  CMakeCache.txt  CMakeLists.txt  README  README.md
FOAM/: FOAM_CLASS.C  FOAM_CLASS.H
cmake/Modules/: FindOpenFOAM.cmake
foam/: rocFoam.C  rocFoam.H
include/: comFoam.H  comLoadUnload.H  comRhoCentral.H  fileContainer.H  rocFoam.H  rocRhoCentral.H  rocRhoPimple.H  rocstarFSISolidBodyMotion.H  surfaceDisplacementPointPatchVectorFieldFSI.H
replaceables/: UPstream.C
replaceables/src/Pstream/mpi/: UPstream.C
replaceables/src/dynamicFvMesh/dynamicFvMesh/: dynamicFvMesh.H  dynamicFvMeshNew.C
rhoCentral/: RHOCENTRAL_CLASS.C  RHOCENTRAL_CLASS.H  rhoCentral.C  rocRhoCentral.H
rhoCentral/Make/: files  options
rhoPimple/: Allwmake  RHOPIMPLE_CLASS.C  RHOPIMPLE_CLASS.H  rhoPimple.C  rocRhoPimple.C  rocRhoPimple_drv.C
rhoPimple/Make/: files  options
src/BCs/: rocstarFSI.C  rocstarFSISolidBodyMotion.C
src/com/: comFoam.C  comFoam_drv.C  comRhoCentral.C  comRhoCentral_drv.C  comRhoPimple.C  rhoCentral_drv.C
src/foam/: comFoam.C  faceMethods.C  faceMethods.H  fileContainer.C  filesMethods.C  initFiles.C  reconstMethods.C  reconstMethods.H  rocFoam.C  rocFoam_drv.C  statusMethods.C  surfaceDisplacementPointPatchVectorFieldFSI.C  surfaceMethods.C  surfaceMethods.H  surfaceWindowMethods.H  tempFiles.C  volumeMethods.C  volumeMethods.H  volumeWindowMethods.H  zonesMethods.C
src/rhoCentral/: rocRhoCentral.C  rocRhoCentral_drv.C
src/rhoPimple/: rocRhoPimple.C  rocRhoPimple_drv.C
testing/: CMakeLists.txt
testing/data/forwardStep/rhoCentral/run/0.11/: T  U  p  rho
testing/data/forwardStep/rhoCentral/run/0.11/uniform/: time
testing/data/forwardStep/rhoCentral/run/constant/polyMesh/: faces  neighbour  owner
testing/data/forwardStep/rhoCentral/run/processor0/0/: U  p
testing/data/forwardStep/rhoCentral/run/processor0/constant/polyMesh/: faces  owner
testing/data/forwardStep/rhoCentral/run/processor1/0/: U
testing/data/forwardStep/rhoCentral/run/processor1/constant/polyMesh/: faces  neighbour  owner  pointProcAddressing  points
testing/data/forwardStep/rhoCentral/run/system/: controlDict
testing/data/forwardStep/rhoPimple/run/0.11/: Ma  T  U  p  phi  rho
testing/data/forwardStep/rhoPimple/run/0.11/uniform/: time
testing/data/forwardStep/rhoPimple/run/constant/polyMesh/: faces  neighbour  points
testing/data/forwardStep/rhoPimple/run/processor0/0/: U
testing/data/forwardStep/rhoPimple/run/processor0/constant/polyMesh/: cellProcAddressing  faceProcAddressing  faces  pointProcAddressing  points
testing/data/forwardStep/rhoPimple/run/processor1/0/: T
testing/data/forwardStep/rhoPimple/run/processor1/constant/polyMesh/: faceProcAddressing  faces  neighbour  owner  pointProcAddressing
testing/data/forwardStep/rhoPimple/run/system/: controlDict  decomposeParDict
testing/data/forwardStep/rocFoam/rhoCentral/run/constant/polyMesh/: boundary  points
testing/data/forwardStep/rocFoam/rhoCentral/run/processor0/0/: T
testing/data/forwardStep/rocFoam/rhoCentral/run/processor0/constant/polyMesh/: boundary  cellProcAddressing  faceProcAddressing  neighbour  pointProcAddressing  points
testing/data/forwardStep/rocFoam/rhoCentral/run/processor1/0/: T  p
testing/data/forwardStep/rocFoam/rhoCentral/run/processor1/constant/polyMesh/: boundary  cellProcAddressing  faceProcAddressing
testing/data/forwardStep/rocFoam/rhoPimple/run/constant/polyMesh/: boundary  owner
testing/data/forwardStep/rocFoam/rhoPimple/run/processor0/0/: T  p
testing/data/forwardStep/rocFoam/rhoPimple/run/processor0/constant/polyMesh/: boundary  neighbour  owner
testing/data/forwardStep/rocFoam/rhoPimple/run/processor1/0/: U  p
testing/data/forwardStep/rocFoam/rhoPimple/run/processor1/constant/polyMesh/: boundary  cellProcAddressing  points
testing/lib/googletest/: CMakeLists.txt
testing/src/: normTest.C  normTestCentral.C  normTestPimple.C  regression.C  rocFoamTests.C  rocRhoCentralTests.C  rocRhoPimpleTests.C
